# zoowallet

./: .editorconfig  .gitignore  DESIGN.md  LICENSE  Makefile  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
.kiro/specs/: 00-overview.md  README.md
.kiro/specs/phase-0-foundation/: requirements.md  tasks.md
.kiro/specs/phase-1-mvp/: design.md  requirements.md  tasks.md
.kiro/steering/: tech-stack.md
docs/: API.md  ARCHITECTURE.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: eth.rs  mod.rs  network.rs  wallet.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: crypto.rs  db.rs  mod.rs  rpc.rs  storage.rs
src/components/: ErrorBoundary.tsx
src/components/ui/: Button.tsx  CopyButton.tsx  Input.tsx  Modal.tsx  PasswordModal.tsx  Toast.tsx
src/lib/: ipc.ts
src/pages/: CreateWallet.tsx  Dashboard.tsx  History.tsx  ImportWallet.tsx  Receive.tsx  Security.tsx  Send.tsx  SendSuccess.tsx  Settings.tsx  Unlock.tsx  Welcome.tsx
src/store/: networkStore.ts  priceStore.ts  uiStore.ts  walletStore.ts
src/styles/: globals.css
src/types/: index.ts
